fixed image stretch issue

--- a/index.css
+++ b/index.css
@@ -81,6 +81,8 @@ h2 {
 .flip-card-inner img {
     width: 100%;
     border-radius: 5px 5px 0 0;
+    max-height: 250px;
+    object-fit: cover;
 }
 
 .flip-card-front {
